Gracefully handles version and drops `version` suffix

--- a/lib/templates/error.html
+++ b/lib/templates/error.html
@@ -133,7 +133,7 @@
       </article>
       <article class="content">
         <h2>Environment</h2>
-        <span>node@{{nodeJSVersion}}, ember-cli@{{emberCLIVersion}}, ember@{{emberVersion}}{{#if emberDataVersion}} and ember-data@{{emberDataVersion}}{{/if}}.</span>
+        <span>{{versionString}}</span>
       </article>
     </main>
   </body>
