Enable the ability to scroll when the callstack's height is > 600px
Right now, the callstack is just cut out and you need to inspect source to see the rest of it.

--- a/lib/templates/error.html
+++ b/lib/templates/error.html
@@ -41,7 +41,7 @@
       .callstack {
         transition: height 0.5s;
         height: 0px;
-        overflow: hidden;
+        overflow: auto;
       }
       .callstack h4 {
         margin-top: 0;
