Add original Tomster to the Dang! error page for encouragement
For those of us who end up on the Ember build error page, a Tomster
to offer encouragement for the hamster wheel we're in at the moment.
I mentioned this to @wifelette in the Ember Slack, and though she
thought a few different Tomsters would work, I thought this one was
the kindest option.

--- a/lib/templates/error.html
+++ b/lib/templates/error.html
@@ -23,7 +23,14 @@
         padding: 0;
       }
       .ember-cli-logo {
+        margin-top: 50px;
         width: 250px;
+        float: left;
+      }
+      .tomster-logo {
+        height: 200px;
+        overflow: hidden;
+        float: right;
       }
       .content {
         padding: 0 15px;
@@ -31,6 +38,7 @@
       .container {
         width: 1080px;
         margin: 0 auto;
+        overflow: hidden;
       }
       .error-header {
         font-size: 2em;
@@ -683,6 +691,9 @@ qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq
 sAcHAgAAAABA/q+NoKqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq
 qqqqqqqqqqqqqqqqqqoq7cEBCQAAAICg/6/bEagAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwEyqo/B+CtGqPQAAAABJRU5ErkJggg==" />
+      </div>
+      <div>
+        <img class="tomster-logo" src="https://emberjs.com/images/tomsters/original-72df3a45.png">
       </div>
     </header>
     <main class="container">
