Add utf-8 encoding to properly display emoji

--- a/lib/templates/error.html
+++ b/lib/templates/error.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{{errorType}}</title>
+    <meta charset="utf-8">
     {{#if liveReloadPath}}
       <script src="{{liveReloadPath}}"></script>
     {{/if}}
